--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="width=device-width, >
         <title>Barbearia Alura</title>
 
-        <link rel="stylesheet" href="/CSS/reset.css">
-        <link rel="stylesheet" href="/CSS/style.css">
+        <link rel="stylesheet" href="/reset.css">
+        <link rel="stylesheet" href="/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="/css/rodape.css">
         
