--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="/reset.css">
         <link rel="stylesheet" href="/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/css/rodape.css">
+        <link rel="stylesheet" href="/rodape.css">
         
         
         </style>
@@ -20,7 +20,7 @@
                 <div>
                     <h1 >
                         <a href="/index.html" >
-                            <img src="/imagens/logo.png" alt="Logo da Barberaria Alura" class="imagem-logo" > 
+                            <img src="/logo.png" alt="Logo da Barberaria Alura" class="imagem-logo" > 
                         </a>
                     </h1>
                 </div>
