--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
         <title>Barbearia Alura</title>
 
         <link rel="stylesheet" href="/reset.css">
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="/BARBEARIA-ALURA/CSS/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/rodape.css">
+        <link rel="stylesheet" href="/rodape.css">      
         
         
-        </style>
     </head>
     <body class="fonte">
         <header >
