--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <meta name="viewport" content="width=device-width, >
         <title>Barbearia Alura</title>
 
-        <link rel="stylesheet" href="/reset.css">
+        <link rel="stylesheet" href="/BARBEARIA-ALURA/CSS/reset.css">
         <link rel="stylesheet" href="/BARBEARIA-ALURA/CSS/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/rodape.css">      
+        <link rel="stylesheet" href="/BARBEARIA-ALURA/CSS/rodape.css">      
         
         
     </head>
