--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div>
                     <h1 >
                         <a href="/index.html" >
-                            <img src="/logo.png" alt="Logo da Barberaria Alura" class="imagem-logo" > 
+                            <img src="/BARBEARIA-ALURA/imagens/logo.png" alt="Logo da Barberaria Alura" class="imagem-logo" > 
                         </a>
                     </h1>
                 </div>
