--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="caixa">
                 <div>
                     <h1 >
-                        <a href="/index.html" >
+                        <a href="/BARBEARIA-ALURA/index.html" >
                             <img src="/BARBEARIA-ALURA/imagens/logo.png" alt="Logo da Barberaria Alura" class="imagem-logo" > 
                         </a>
                     </h1>
@@ -26,9 +26,9 @@
                 <div>
                     <nav class="menu">
                         <ul>
-                            <li class="links-menu"><a href="/index.html">Home</a></li>
-                            <li class="links-menu"><a href="/produtos.html">Produtos</a></li>
-                            <li class="links-menu"><a href="/contatos.html">Contato</a></li>
+                            <li class="links-menu"><a href="/BARBEARIA-ALURA/index.html">Home</a></li>
+                            <li class="links-menu"><a href="/BARBEARIA-ALURA/produtos.html">Produtos</a></li>
+                            <li class="links-menu"><a href="/BARBEARIA-ALURA/contatos.html">Contato</a></li>
                         </ul>
                     </nav>
                 </div>
