--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
         </header>
 
         <main>
-            <img class="banner" src="/imagens/banner.jpg" >        
+            <img class="banner" src="/BARBEARIA-ALURA/imagens/banner.jpg" >        
 
             <section class="principal">
 
                 <h2 class="titulo-principal"><strong>Sobre a Barbearia Alura</strong></h2> 
 
-                <img class="utensilios" src="/imagens/utensilios.jpg" alt="Utensilios de um barbeiro">
+                <img class="utensilios" src="/BARBEARIA-ALURA/imagens/utensilios.jpg" alt="Utensilios de um barbeiro">
 
                     <!--  <p style="text-align: center;">Localizada no coração da cidade a <strong>Barbearia Alura</strong>  traz para o mercado o que há de melhor 
                     para o seu cabelo e barba. Fundada em <strong>2019</strong>, a <strong>Barbearia Alura</strong> já é destaque na cidade e 
