--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </main>
 
         <footer>
-            <img src="/imagens/logo-branco.png" alt="Logo da Barberaria Alura">
+            <img src="/BARBEARIA-ALURA/imagens/logo-branco.png" alt="Logo da Barberaria Alura">
             <p class="copyrigth">&copy; Copyrigth Barbearia Alura - 2022</p>
         </footer>
         
