--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <li class="itens">Profissionais Qualificados</li>
                         <li class="itens">Pontualidade</li>
                         <li class="itens">Limpeza</li>
-                    </ul><img src="/imagens/beneficios.jpg" class="imagem-beneficios">
+                    </ul><img src="/BARBEARIA-ALURA/imagens/beneficios.jpg" class="imagem-beneficios">
                 </div>   
                     
                 <div class="video">
