--- a/produtos.html
+++ b/produtos.html
@@ -6,25 +6,25 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Produtos - Barbearia Alura</title>
 
-        <link rel="stylesheet" href="/CSS/reset.css">        
-        <link rel="stylesheet" href="/CSS/style.css"> 
-        <link rel="stylesheet" href="/CSS/produtos.css">     
+        <link rel="stylesheet" href="/BARBEARIA-ALURA/CSS/reset.css">        
+        <link rel="stylesheet" href="/BARBEARIA-ALURA/CSS/style.css"> 
+        <link rel="stylesheet" href="/BARBEARIA-ALURA/CSS/produtos.css">     
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/css/rodape.css"
+        <link rel="stylesheet" href="/BARBEARIA-ALURA/css/rodape.css"
     </head>
     <body class="fonte">
         <header >
             <div class="caixa">
                 <h1 >
                     <a href="/index.html" >
-                        <img src="/imagens/logo.png" alt="Logo da Barberaria Alura" class="imagem-logo"> 
+                        <img src="/BARBEARIA-ALURA/imagens/logo.png" alt="Logo da Barberaria Alura" class="imagem-logo"> 
                     </a>
                 </h1>
                 <nav class="menu">
                     <ul>
-                        <li class="links-menu"><a href="/index.html">Home</a></li>
-                        <li class="links-menu"><a href="/produtos.html">Produtos</a></li>
-                        <li class="links-menu"><a href="/contatos.html">Contatos</a></li>
+                        <li class="links-menu"><a href="/BARBEARIA-ALURA/index.html">Home</a></li>
+                        <li class="links-menu"><a href="/BARBEARIA-ALURA/produtos.html">Produtos</a></li>
+                        <li class="links-menu"><a href="/BARBEARIA-ALURA/contatos.html">Contatos</a></li>
                     </ul>
                 </nav>
             </div>
@@ -34,19 +34,19 @@
             <ul class="produtos">
                 <li class="produtos-caixa">
                     <h2>Cabelo</h2>
-                    <img src="/imagens/cabelo.jpg">
+                    <img src="/BARBEARIA-ALURA/imagens/cabelo.jpg">
                     <p class="produto-descricao">Na tesoura ou máquina, como o cliente preferir</p>
                     <p class="produto-preco">R$ 25,00</p>
                 </li>
                 <li class="produtos-caixa">
                     <h2>Barba</h2>
-                    <img src="/imagens/barba.jpg">
+                    <img src="/BARBEARIA-ALURA/imagens/barba.jpg">
                     <p class="produto-descricao">Corte e deseho profissional de Barba</p>
                     <p class="produto-preco">R$ 18,00</p>
                 </li>
                 <li class="produtos-caixa">
                     <h2>Cabelo + Barba</h2>
-                    <img src="/imagens/cabelo+barba.jpg">
+                    <img src="/BARBEARIA-ALURA/imagens/cabelo+barba.jpg">
                     <p class="produto-descricao">Pacote completo de cabelo e barba</p>
                     <p class="produto-preco">R$ 35,00</p>
                 </li>
@@ -54,7 +54,7 @@
         </main>
 
         <footer>
-            <img src="/imagens/logo-branco.png">
+            <img src="/BARBEARIA-ALURA/imagens/logo-branco.png">
             <p class="copyrigth">&copy; Copyrigth Barbearia Alura - 2022</p>
         </footer>
 
