--- a/contatos.html
+++ b/contatos.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato - Barbearia Alura</title>
 
-    <link rel="stylesheet" href="/CSS/reset.css">
-    <link rel="stylesheet" href="/CSS/style.css">
-    <link rel="stylesheet" href="/CSS/contatos.css">
+    <link rel="stylesheet" href="/BARBEARIA-ALURA/CSS/reset.css">
+    <link rel="stylesheet" href="/BARBEARIA-ALURA/CSS/style.css">
+    <link rel="stylesheet" href="/BARBEARIA-ALURA/CSS/contatos.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/rodape.css">
+    <link rel="stylesheet" href="/BARBEARIA-ALURA/css/rodape.css">
     
 
 </head>
@@ -19,14 +19,14 @@
         <div class="caixa">
             <h1 >
                 <a href="/index.html">
-                    <img src="/imagens/logo.png" alt="Logo da Barberaria Alura" class="imagem-logo"> 
+                    <img src="/BARBEARIA-ALURA/imagens/logo.png" alt="Logo da Barberaria Alura" class="imagem-logo"> 
                 </a>
             </h1>
             <nav class="menu">
                 <ul >
-                    <li class="links-menu"><a href="/index.html">Home</a></li>
-                    <li class="links-menu"><a href="/produtos.html">Produtos</a></li>
-                    <li class="links-menu"><a href="/contatos.html">Contatos</a></li>
+                    <li class="links-menu"><a href="/BARBEARIA-ALURA/index.html">Home</a></li>
+                    <li class="links-menu"><a href="/BARBEARIA-ALURA/produtos.html">Produtos</a></li>
+                    <li class="links-menu"><a href="/BARBEARIA-ALURA/contatos.html">Contatos</a></li>
                 </ul>
             </nav>
         </div>
@@ -121,7 +121,7 @@
     </main>
 
     <footer>
-        <img src="/imagens/logo-branco.png" alt="Logo da Barberaria Alura">
+        <img src="/BARBEARIA-ALURA/imagens/logo-branco.png" alt="Logo da Barberaria Alura">
         <p class="copyrigth">&copy; Copyrigth Barbearia Alura - 2022</p>
     </footer>
 
