--- a/produtos.html
+++ b/produtos.html
@@ -54,7 +54,7 @@
         </main>
 
         <footer>
-            <img src="/imagens/logo-branco.png">
+            <img src="/BARBEARIA-ALURA/imagens/logo-branco.png">
             <p class="copyrigth">&copy; Copyrigth Barbearia Alura - 2022</p>
         </footer>
 
