--- a/produtos.html
+++ b/produtos.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="/BARBEARIA-ALURA/CSS/style.css"> 
         <link rel="stylesheet" href="/BARBEARIA-ALURA/CSS/produtos.css">     
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/BARBEARIA-ALURA/css/rodape.css"
+        <link rel="stylesheet" href="/css/rodape.css"
     </head>
     <body class="fonte">
         <header >
