--- a/produtos.html
+++ b/produtos.html
@@ -16,7 +16,7 @@
         <header >
             <div class="caixa">
                 <h1 >
-                    <a href="/index.html" >
+                    <a href="/BARBEARIA-ALURA/index.html" >
                         <img src="/BARBEARIA-ALURA/imagens/logo.png" alt="Logo da Barberaria Alura" class="imagem-logo"> 
                     </a>
                 </h1>
