--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, >
-        <title>Barbearia Alura</title>
+        <title>Barbearia Alura </title>
 
         <link rel="stylesheet" href="/BARBEARIA-ALURA/CSS/reset.css">
         <link rel="stylesheet" href="/BARBEARIA-ALURA/CSS/style.css">
@@ -52,9 +52,7 @@
                     em todas as tags <p> por exemplo.    
                     -->
 
-                    <p class="sobre">Localizada no coração da cidade a <strong>Barbearia Alura</strong>  traz para o mercado o que há de melhor 
-                    para o seu cabelo e barba. Fundada em <strong>2019</strong>, a <strong>Barbearia Alura</strong> já é destaque na cidade e 
-                    conquista novos clientes a cada dia.</p>
+                    <p class="sobre">Localizada no coração da cidade a <strong>Barbearia Alura</strong>  traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em <strong>2019</strong>, a <strong>Barbearia Alura</strong> já é destaque na cidade e onquista novos clientes a cada dia e sempre atendendo todos de forma ágil.</p>
 
                     <p id="missao" class="sobre"> <strong>   Nossa missão é: <em>"Proporcionar auto-estima e qualidade de vida aos clientes". </em></strong></p>
 
