--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             <section class="principal">
 
-                <h2 class="titulo-principal"><strong>Sobre a Barbearia Alura</strong></h2> 
+                <h2 class="titulo-principal"><strong>Quem somos</strong></h2> 
 
                 <img class="utensilios" src="/BARBEARIA-ALURA/imagens/utensilios.jpg" alt="Utensilios de um barbeiro">
 
